fix toolbar icons separately and readable

--- a/src/app/components/toolbar/toolbar.scss
+++ b/src/app/components/toolbar/toolbar.scss
@@ -27,6 +27,10 @@ md-toolbar {
     font-size: 1.150em;
     font-weight: 400;
   }
+  .icons-group * {
+    margin-left: 2px;
+    margin-right: 2px;
+  }
 }
 
 
